#2371 fixed left and right panel spacing on top

--- a/web/assets/css/responsive_css.css
+++ b/web/assets/css/responsive_css.css
@@ -2197,6 +2197,12 @@ box-shadow:         0px 1px 5px 0px rgba(50, 50, 50, 0.75);
     display: none;
 }
 
+/** christmas theme fixed for left and right panel **/
+.christmas-theme-fixed-con .feed-left-panel-fix,
+.christmas-theme-fixed-con .feed-right-panel-fix {
+    margin-top: -160px;
+}
+
 /*** Log in style ***/
 .res_wrapper.login_content {
     font-size: 0.95em;
